apps/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    gateway-access: code-server
