apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      nodeSelector:
        affected_vlan: "50"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: code-server
          image: ghcr.io/jhoareaumarion/homelab-kubernetes-apps/code-server:0.0.26
          args: ["--bind-addr", "0.0.0.0:8080", "/home/coder/workspace"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /home/coder
            - name: config-yaml
              mountPath: /home/coder/.config/code-server/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: kube-writable
              mountPath: /home/coder/.kube
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: code-server-pvc
        - name: config-yaml
          configMap:
            name: code-server-config
        - name: kubeconfig-secret
          secret:
            secretName: kubeconfig
        - name: kube-writable
          emptyDir: {}
        - name: gpg-secret
          secret:
            secretName: git-identity-secret
            items:
            - key: GPG_KEY
              path: GPG_KEY
