apps/code-server/route.yaml
# apps/code-server/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server-route
  namespace: code-server
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: code-server-https
  hostnames:
    - "code-server.hoareau-marion.eu"
  rules:  
    - matches:
        - path:
            type: PathPrefix
            value: "/"
    - filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: X-Forwarded-Proto
            value: https
          - name: X-Forwarded-Host
            value: code-server.hoareau-marion.eu
    - backendRefs:
        - name: code-server
          port: 8080
